compiler/testData/diagnostics/tests/dataClasses/innerDataClass.kt
class Outer {
    <!DEPRECATED_MODIFIER_PAIR!>inner<!> <!DEPRECATED_MODIFIER_PAIR!>data<!> class Inner(val x: Int)
}
